k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: gateway-env
          image: micro-services-sample-gateway:latest
          imagePullPolicy: Never
          name: gateway
          ports:
            - containerPort: 2000
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            httpGet:
              port: 2000
              path: /status
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            httpGet:
              port: 2000
              path: /status
