k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: user
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: user
          image: postgres
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
