k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  ports:
    - name: socket
      port: 3000
  selector:
    app: auth
