k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 2000
  selector:
    app: gateway
