k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user
spec:
  ports:
    - name: socket
      port: 4000
  selector:
    app: user
