k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: gateway
  name: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gateway.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: gateway
                port:
                  number: 2000
            path: /
            pathType: Prefix
